--- a/LeoT1_example_zspec.ipynb
+++ b/LeoT1_example_zspec.ipynb
@@ -1129,164 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/erik/miniconda3/envs/astro36/lib/python3.6/site-packages/ipykernel_launcher.py:29: DeprecationWarning: on_trait_change is deprecated in traitlets 4.1: use observe instead\n",
-      "/Users/erik/miniconda3/envs/astro36/lib/python3.6/site-packages/ipykernel_launcher.py:47: DeprecationWarning: on_trait_change is deprecated in traitlets 4.1: use observe instead\n",
-      "/Users/erik/miniconda3/envs/astro36/lib/python3.6/site-packages/ipykernel_launcher.py:52: DeprecationWarning: on_trait_change is deprecated in traitlets 4.1: use observe instead\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e281e757952147128019726dc05b6151",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='<', style=ButtonStyle()), Dropdown(options=('000.s6778228074…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "934e9fc738bb492198a11db671a8e928",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "def f(specname, templname, v):\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
-    "    zline = (v*u.km/u.s/c + 1).decompose().value\n",
-    "    \n",
-    "    spec = zspecs[specname]\n",
-    "    if templname is not None:\n",
-    "        tspec = template_specs[templname]\n",
-    "    for ax in [ax1, ax2]:\n",
-    "        ax.cla()\n",
-    "        ax.step(spec.wavelength, spec.flux)\n",
-    "        data_yls = ax.get_ylim()\n",
-    "        if templname is not None:\n",
-    "            ax.step(tspec.wavelength, tspec.flux.value*np.median(spec.flux))\n",
-    "        ax.set_ylim(*data_yls)\n",
-    "    ax1.set_title(specname)\n",
-    "    ax2.set_xlim(cat_lines[0]*zline-20*u.angstrom, cat_lines[-1]*zline+20*u.angstrom)\n",
-    "    \n",
-    "    msk2 = (ax2.get_xlim()[0]<spec.wavelength.value)&(spec.wavelength.value<ax2.get_xlim()[1])\n",
-    "    plt.ylim(np.min(spec.flux[msk2]), np.max(spec.flux[msk2]))\n",
-    "    for line in cat_lines:\n",
-    "        ax2.axvline(line*zline, c='k', ls=':')\n",
-    "    \n",
-    "    plt.show()\n",
-    "\n",
-    "dropdown = ipywidgets.Dropdown(options=zspecs.keys())\n",
-    "def update_dropdown(change):\n",
-    "    zspec.value = zspec_vals[dropdown.value]\n",
-    "    comments.value = spec_comments[dropdown.value]\n",
-    "dropdown.on_trait_change(update_dropdown, 'value')\n",
-    "\n",
-    "left = ipywidgets.Button(description='<')\n",
-    "right = ipywidgets.Button(description='>')\n",
-    "@left.on_click\n",
-    "def on_left_clicked(b):\n",
-    "    idx = dropdown.options.index(dropdown.value)\n",
-    "    if idx > 0:\n",
-    "        dropdown.value = dropdown.options[idx-1]\n",
-    "@right.on_click\n",
-    "def on_right_clicked(b):\n",
-    "    idx = dropdown.options.index(dropdown.value)\n",
-    "    if idx < len(dropdown.options)-1:\n",
-    "        dropdown.value = dropdown.options[idx+1]\n",
-    "\n",
-    "zspec = ipywidgets.Dropdown(options=['uncategorized', 'bad', 'marginal', 'good'], description='zspec:')\n",
-    "def update_zspec(change):\n",
-    "    zspec_vals[dropdown.value] = zspec.value\n",
-    "zspec.on_trait_change(update_zspec, 'value')\n",
-    "\n",
-    "comments = ipywidgets.Text(description='Comments:')\n",
-    "def update_comments(change):\n",
-    "    spec_comments[dropdown.value] = comments.value\n",
-    "comments.on_trait_change(update_comments, 'value')\n",
-    "\n",
-    "template = ipywidgets.Dropdown(description='template', options=[None]+list(template_specs.keys()))\n",
-    "vval = ipywidgets.FloatText(value=35, description='v (km/s)')\n",
-    "\n",
-    "    \n",
-    "top = ipywidgets.HBox([left, dropdown, right])\n",
-    "middle = ipywidgets.HBox([zspec, comments])\n",
-    "lower = ipywidgets.HBox([template, vval])\n",
-    "\n",
-    "ui = ipywidgets.VBox([top, middle, lower])\n",
-    "out = ipywidgets.interactive_output(f, dict(specname=dropdown, templname=template, v=vval))\n",
-    "\n",
-    "d = Event(source=out, watched_events=['keyup'])\n",
-    "def handle_event(event):\n",
-    "    try:\n",
-    "        if event['key'] in KEY_TO_QUALITY.keys():\n",
-    "            zspec.value = KEY_TO_QUALITY[event['key']]\n",
-    "        elif event['key'] in ('-', '[',','):\n",
-    "            left.click()\n",
-    "        elif event['key'] in ('+', ']','.'):\n",
-    "            right.click()\n",
-    "    except Exception as e:\n",
-    "        comments.value = repr(e)\n",
-    "d.on_dom_event(handle_event)\n",
-    "\n",
-    "\n",
-    "display.display(ui, out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(defaultdict(<function __main__.<lambda>()>, {}),\n",
-       " defaultdict(<function __main__.<lambda>()>, {}))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zspec_vals, spec_comments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Fast enough to go fast\n",
-    "* hit number buttons for zspeccing (ipyevents)\n",
-    "* 2D slit\n",
-    "\n",
-    "* (some quality plots/chi^2 surfaces - understandable interface to Marla)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e49ac29f78d74321903344b45c1a043f",
+       "model_id": "d6b207c8ab7f4b108aa84cfe9e9011d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1315,7 +1158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0f9adb3a7834ec0a9f3cba6a8e8f95e",
+       "model_id": "343985262fe64c6090135cf7a5cecc56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1460,6 +1303,42 @@
     "    \n",
     "for widget in (dropdown, template, vval):\n",
     "    widget.on_trait_change(update_fig, 'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(defaultdict(<function __main__.<lambda>()>, {}),\n",
+       " defaultdict(<function __main__.<lambda>()>, {}))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zspec_vals, spec_comments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Marla requests:\n",
+    "\n",
+    "* Fast enough to go fast\n",
+    "* hit number buttons for zspeccing (ipyevents)\n",
+    "* 2D slit\n",
+    "\n",
+    "* (some quality plots/chi^2 surfaces - understandable interface to Marla)"
    ]
   }
  ],
